# flou

./: README.md
camera/: readme.md
camera/calibration/: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  calibration  cmake_install.cmake  readme.md
camera/calibration/plot/: plot-roi.plt  points.data
camera/calibration/source/: .calibration.cpp.swo  .calibration.cpp.swp  calibration.cpp
camera/diffraction-fitting/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  diffraction-fitting  points.data  readme.md
camera/diffraction-fitting/source/: #main.cpp#  .calibration.cpp.swp  main.cpp
capture/: capture.ps1  readme.md
center-finder/: .center-finder-plotter.sh.swp  .gitignore  .~lock.center-finder_centroid_square.ods#  center-average.py  center-diffraction.py  center-finder-plotter-output.csv  center-finder-plotter.sh  center-finder.py  center-finder_centroid_log.csv  center-finder_centroid_square.ods  center-finder_circle_log.csv  center-finder_circle_mean.csv  center-finder_circle_median.csv  center-finder_circle_min.csv  center-finder_diffraction_log.ods  center-finder_isquare_log.csv  center-finder_isquare_mean.csv  center-finder_isquare_median.csv  center-finder_isquare_min.csv  centre-moyenne.py  centroid.py  readme.md  requirements.txt  threshold.py
distance-finder/: .gitignore  center-finder_diffraction_log.csv  parameters-finder.py
mathematica-test/: LiveFeed.nb  Tests.nb  Untitled-1.nb  Untitled-2.nb  angle.nb  bessel-vs-sinc.nb  noisy-centroid-1.nb
plateforme/: platform-driver-software.sh  readme.md
scripts/: readme.md
(+50 files in other folders)
