cmake_minimum_required(VERSION 2.8)
set (CMAKE_CXX_STANDARD 11)
project(diffraction-fitting)
find_package(OpenCV REQUIRED)
include_directories(${OpenCV_INCLUDE_DIRS})
include_directories(include)
file(GLOB SOURCES "source/*.cpp")
add_executable(diffraction-fitting ${SOURCES})
target_link_libraries(diffraction-fitting ${OpenCV_LIBS})
